--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Haroldo Gondim - Full-stack developer</title>
   <meta name="description" content="O meu email e portfólio estão na página. Vem dar uma olhada ;)">
-  <meta name="keywords" content="sites, web, desenvolvimento, html, design, programação, php, programador web, programação web, desenvolvimento web, bom programador web, bom desenvolvedor web, programador php">
+  <meta name="keywords" content="sites, web, desenvolvimento, html, design, programação, php, programador web, programação web, desenvolvimento web, bom programador web, bom desenvolvedor web, programador php, programador habbo, habbo programador, habbo bom programador, idhabbo, habboz, tropihabbo, habbid">
   
   <meta property="og:title" content="Haroldo Gondim">
   <meta property="og:site_name" content="Haroldo Gondim">
