--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <i class="fa fa-github"></i>
             </span>
           </a>
-          <a class="nav-item" title="hey@haroldogondim.com" href="mailto:hey@haroldogondim.com">
+          <a class="nav-item" title="hey@haroldogondim.me" href="mailto:hey@haroldogondim.me">
             <span class="icon">
               <i class="fa fa-envelope-o"></i>
             </span>
