--- a/index.html
+++ b/index.html
@@ -261,17 +261,17 @@
             </div>
 
             <div class="content">
-              Sou desenvolvedor web por 6 anos e apaixonado pelo que faço. Fiz alguns sites, e alguns com amigos, e os mais importantes estarão no portfolio. ;)<br />
+              Sou desenvolvedor web há 6 anos e apaixonado pelo que faço. Fiz alguns sites, e alguns com amigos, e os mais importantes estarão no portfolio. ;)<br />
               <hr>
               <p class="title is-4">Habilidades</p>
               <p class="control">
-              <span class="tag is-dark">PHP (+CakePHP)</span>
-              <span class="tag is-primary">HTML5</span>
-              <span class="tag is-info">CSS3 (+Bootstrap)</span>
-              <span class="tag is-success">SQL</span>
-              <span class="tag is-warning">JavaScript (+jQuery)</span>
-              <span class="tag is-danger">Apache</span>
-              <span class="tag is-dark">NGINX</span>
+              <span class="tag is-grey">PHP (+CakePHP)</span>
+              <span class="tag is-grey">HTML5</span>
+              <span class="tag is-grey">CSS3 (+Bootstrap)</span>
+              <span class="tag is-grey">SQL</span>
+              <span class="tag is-grey">JavaScript (+jQuery)</span>
+              <span class="tag is-info">Apache</span>
+              <span class="tag is-info">NGINX</span>
               <span class="tag is-info">UNIX</span>
               <span class="tag is-success" title="Básico">GIT*</span>
               </p>
@@ -280,7 +280,7 @@
               <p><a href="http://www.zaite.com.br/" target="_blank">Zaite Tecnologia</a> ~ Fev - Ago 2015</p>
               <hr>
               <a href="https://pt.wikipedia.org/wiki/Recife" target="_blank"><i class="fa fa-location-arrow"></i> Recife, PE</a><br />
-              <a href="javascript:;" target="_blank"><i class="fa fa-book"></i> Faculdade Joaquim Nabuco, Sistemas de Informação</a><br />
+              <a href="javascript:;" target="_blank"><i class="fa fa-book"></i> UNINASSAU, Ciência da Computação</a><br />
               <a href="tel:+5581996493276" target="_blank"><i class="fa fa-phone"></i>+55 (81) 99649-3276</a>
             </div>
           </div>
@@ -291,7 +291,6 @@
   <footer class="footer">
     <div class="container">
       <div class="content has-text-centered">
-        <p>Site construído com <a href="https://github.com/jgthms/bulma" target="_blank"><strong>Bulma</strong></a> por Haroldo Gondim</p>
         <p>
           <strong>Bulma</strong> by <a href="http://jgthms.com">Jeremy Thomas</a>. The source code is licensed
           <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
