--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="hero-body">
       <div class="container" style="text-align:center;">
         <h1 class="title">
-          Haroldo Gondim, 21
+          Haroldo Gondim
         </h1>
         <h2 class="subtitle">
           Full-stack developer
