--- a/index.html
+++ b/index.html
@@ -265,11 +265,11 @@
               <hr>
               <p class="title is-4">Habilidades</p>
               <p class="control">
-              <span class="tag is-grey">PHP (+CakePHP)</span>
-              <span class="tag is-grey">HTML5</span>
-              <span class="tag is-grey">CSS3 (+Bootstrap)</span>
-              <span class="tag is-grey">SQL</span>
-              <span class="tag is-grey">JavaScript (+jQuery)</span>
+              <span class="tag is-dark">PHP (+CakePHP)</span>
+              <span class="tag is-dark">HTML5</span>
+              <span class="tag is-dark">CSS3 (+Bootstrap)</span>
+              <span class="tag is-dark">SQL</span>
+              <span class="tag is-dark">JavaScript (+jQuery)</span>
               <span class="tag is-info">Apache</span>
               <span class="tag is-info">NGINX</span>
               <span class="tag is-info">UNIX</span>
