--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               <div class="control has-icons-left has-icons-right">
                 <input class="input" type="text" id="input-phone">
                 <span class="icon is-small is-left">
-                  <i class="fa fa-user-o"></i>
+                  <i class="fa fa-phone"></i>
                 </span>
               </div>
             </div>
@@ -247,7 +247,7 @@
               <div class="control has-icons-left has-icons-right">
                 <input class="input" type="text" id="input-email">
                 <span class="icon is-small is-left">
-                  <i class="fa fa-user-o"></i>
+                  <i class="fa fa-envelope"></i>
                 </span>
               </div>
             </div>
