--- a/index.html
+++ b/index.html
@@ -283,15 +283,15 @@
               <hr>
               <p class="title is-4">Habilidades</p>
               <p class="control">
-              <span class="tag is-dark">PHP (+CakePHP)</span>
-              <span class="tag is-dark">HTML5</span>
-              <span class="tag is-dark">CSS3 (+Bootstrap)</span>
-              <span class="tag is-dark">SQL</span>
-              <span class="tag is-dark">JavaScript (+jQuery)</span>
-              <span class="tag is-info">Apache</span>
-              <span class="tag is-info">NGINX</span>
-              <span class="tag is-info">UNIX</span>
-              <span class="tag is-success" title="Básico">GIT*</span>
+                <span class="tag is-dark">PHP (+CakePHP)</span>
+                <span class="tag is-dark">HTML5</span>
+                <span class="tag is-dark">CSS3 (+Bootstrap, Semantic UI)</span>
+                <span class="tag is-dark">SQL</span>
+                <span class="tag is-dark">JavaScript (+jQuery, Ajax)</span>
+                <span class="tag is-info">Apache</span>
+                <span class="tag is-info">NGINX</span>
+                <span class="tag is-info">UNIX</span>
+                <span class="tag is-success">GIT</span>
               </p>
               <hr>
               <p class="title is-4">Experiências</p>
