--- a/index.html
+++ b/index.html
@@ -220,12 +220,11 @@
         <h1 class="title">Entre em contato</h1>
         <h2 class="subtitle">Faça sua pergunta, tire sua dúvida ou deixe sua sugestão. ;)</h2>
         <div class="control is-vertical">
-          <form action="javascript:;" method="post" id="form-contact">
-          
+          <form action="https://formspree.io/haroldogondim@hotmail.com" method="post" id="form-contact">
             <div class="field">
               <label class="label">Nome</label>
               <div class="control has-icons-left has-icons-right">
-                <input class="input" type="text" id="input-name">
+                <input class="input" type="text" id="input-name" name="input-name">
                 <span class="icon is-small is-left">
                   <i class="fa fa-user-o"></i>
                 </span>
@@ -235,7 +234,7 @@
             <div class="field">
               <label class="label">Telefone</label>
               <div class="control has-icons-left has-icons-right">
-                <input class="input" type="text" id="input-phone">
+                <input class="input" type="text" id="input-phone" name="input-phone">
                 <span class="icon is-small is-left">
                   <i class="fa fa-phone"></i>
                 </span>
@@ -245,7 +244,7 @@
             <div class="field">
               <label class="label">Email</label>
               <div class="control has-icons-left has-icons-right">
-                <input class="input" type="text" id="input-email">
+                <input class="input" type="text" id="input-email" name="input-email">
                 <span class="icon is-small is-left">
                   <i class="fa fa-envelope"></i> 
                 </span>
@@ -253,9 +252,9 @@
             </div>
             
             <div class="field">
-              <label class="label">Message</label>
+              <label class="label">Mensagem</label>
               <div class="control">
-                <textarea id="input-message" class="textarea" placeholder="Deixe sua mensagem aqui..."></textarea>
+                <textarea name="input-message" id="input-message" class="textarea" placeholder="Deixe sua mensagem aqui..."></textarea>
               </div>
             </div>
             <p class="control">
@@ -279,15 +278,17 @@
             </div>
 
             <div class="content">
-              Sou desenvolvedor web há 6 anos e apaixonado pelo que faço. Fiz alguns sites, e alguns com amigos, e os mais importantes estarão no portfolio. ;)<br />
+              Sou desenvolvedor web há 7 anos e apaixonado pelo que faço. Fiz alguns sites, e alguns com amigos, e os mais importantes estarão no portfolio. ;)<br />
               <hr>
               <p class="title is-4">Habilidades</p>
               <p class="control">
-                <span class="tag is-dark">PHP (+CakePHP)</span>
+                <span class="tag is-dark">PHP (+CakePHP, Laravel)</span>
                 <span class="tag is-dark">HTML5</span>
                 <span class="tag is-dark">CSS3 (+Bootstrap, Semantic UI)</span>
                 <span class="tag is-dark">SQL</span>
-                <span class="tag is-dark">JavaScript (+jQuery, Ajax)</span>
+                <span class="tag is-dark">NodeJS</span>
+                <span class="tag is-dark">RESTful</span>
+                <span class="tag is-dark">JavaScript (+jQuery)</span>
                 <span class="tag is-info">Apache</span>
                 <span class="tag is-info">NGINX</span>
                 <span class="tag is-info">UNIX</span>
