--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <span class="tag is-dark">PHP (+CakePHP, Laravel)</span>
                 <span class="tag is-dark">HTML5</span>
                 <span class="tag is-dark">CSS3 (+Bootstrap, Semantic UI)</span>
-                <span class="tag is-dark">SQL</span>
+                <span class="tag is-dark">MySQL</span>
                 <span class="tag is-dark">NodeJS</span>
                 <span class="tag is-dark">RESTful</span>
                 <span class="tag is-dark">JavaScript (+jQuery)</span>
