--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <i class="fa fa-github"></i>
             </span>
           </a>
-          <a class="nav-item" title="hey@haroldogondim.me" href="mailto:hey@haroldogondim.me">
+          <a class="nav-item" title="hey@haroldogondim.me" href="mailto:haroldogondim@hotmail.com">
             <span class="icon">
               <i class="fa fa-envelope-o"></i>
             </span>
@@ -87,12 +87,12 @@
               </div>
               <div class="media-content">
                 <p class="title is-5"><a href="images/idhabbo-v7.png" target="_blank">Geração Z</a></p>
-                <p class="subtitle is-6">Fã-site Habbo</p>
+                <p class="subtitle is-6">Fórum</p>
               </div>
             </div>
 
             <div class="content">
-              GeraçãoZ é um fórum separado similar ao BCharts porém mais simples. O site conta com sistema de usuários, registro comum e Facebook, fórum dinâmico com BBCode separados por categorias, perfil customizável, sistema de ranking, temas do site customizáveis pelo painel, conversas privadas, entre outras coisas.
+              GeraçãoZ é um fórum similar ao BCharts porém mais simples. O site conta com sistema de usuários, registro comum e Facebook, fórum dinâmico com BBCode separados por categorias, perfil customizável, sistema de ranking, temas do site customizáveis pelo painel, conversas privadas, entre outras coisas.
               <a href="#">#php</a> <a href="#">#mysql</a> <a href="#">#html5</a> <a href="#">#css3</a> <a href="#">#nginx</a> <a href="#">#javascript</a> <a href="#">#jquery</a> <a href="#">#facebookAPI</a> <a href="#">#SemanticUI</a>
               <br>
               <small>2018</small>
