--- a/index.html
+++ b/index.html
@@ -310,16 +310,16 @@
               <hr>
               <p class="title is-4">Habilidades</p>
               <p class="control">
-                <span class="tag is-dark">PHP (+CakePHP, Laravel)</span>
+                <span class="tag is-dark">PHP (Laravel)</span>
                 <span class="tag is-dark">HTML5</span>
                 <span class="tag is-dark">CSS3 (+Bootstrap, Semantic UI)</span>
                 <span class="tag is-dark">MySQL</span>
-                <span class="tag is-dark">NodeJS</span>
-                <span class="tag is-dark">RESTful</span>
+                <span class="tag is-dark" title="Básico">NodeJS</span>
+                <span class="tag is-dark" title="Intermediário">RESTful</span>
                 <span class="tag is-dark">JavaScript (+jQuery)</span>
                 <span class="tag is-info">Apache</span>
                 <span class="tag is-info">NGINX</span>
-                <span class="tag is-info">UNIX</span>
+                <span class="tag is-info" title="Intermediário">UNIX</span>
                 <span class="tag is-success">GIT</span>
               </p> 
               <hr>
@@ -327,7 +327,7 @@
               <p><a href="http://www.zaite.com.br/" target="_blank">Zaite Tecnologia</a> ~ Fev - Ago 2015</p>
               <hr>
               <a href="https://pt.wikipedia.org/wiki/Recife" target="_blank"><i class="fa fa-location-arrow"></i> Recife, PE</a><br />
-              <a href="javascript:;" target="_blank"><i class="fa fa-book"></i> UNINASSAU, Ciência da Computação</a><br />
+              <a href="javascript:;" target="_blank"><i class="fa fa-book"></i> FG, Ciência da Computação</a><br />
               <a href="tel:+5581996493276" target="_blank"><i class="fa fa-phone"></i>+55 (81) 99649-3276</a>
             </div>
           </div>
