--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
                 </figure>
               </div>
               <div class="media-content">
-                <p class="title is-5"><a href="images/idhabbo-v7.png" target="_blank">Geração Z</a></p>
+                <p class="title is-5"><a href="images/idhabbo-v7.png" target="_blank">Minecraft Medieval</a></p>
                 <p class="subtitle is-6">Fórum</p>
               </div>
             </div>
 
             <div class="content">
-              GeraçãoZ é um fórum similar ao BCharts porém mais simples. O site conta com sistema de usuários, registro comum e Facebook, fórum dinâmico com BBCode separados por categorias, perfil customizável, sistema de ranking, temas do site customizáveis pelo painel, conversas privadas, entre outras coisas.
-              <a href="#">#php</a> <a href="#">#mysql</a> <a href="#">#html5</a> <a href="#">#css3</a> <a href="#">#nginx</a> <a href="#">#javascript</a> <a href="#">#jquery</a> <a href="#">#facebookAPI</a> <a href="#">#SemanticUI</a>
+              Minecraft Medieval é um fórum para jogadores do jogo Minecraft. O site é integrado com plugins do jogo Minecraft utilizando MySQL e foi construído utilizando o framework Semantic UI. O site conta com sistema de usuários, login comum e com Facebook, fórum dinâmico com BBCode separados por categorias, perfil customizável, sistema de ranking, CMS, tickets, chat em tempo real, integração com PagSeguro, entre outras coisas.
+              <a href="#">#php</a> <a href="#">#mysql</a> <a href="#">#html5</a> <a href="#">#css3</a> <a href="#">#nginx</a> <a href="#">#javascript</a> <a href="#">#jquery</a> <a href="#">#facebookAPI</a> <a href="#">#SemanticUI</a> <a href="#">#PagSeguro</a>
               <br>
               <small>2018</small>
             </div>
@@ -319,7 +319,7 @@
               <p class="title is-4">Experiências</p>
               <p><a href="http://www.zaite.com.br/" target="_blank">Zaite Tecnologia</a> ~ Fev - Ago 2015</p>
               <hr>
-              <a href="https://pt.wikipedia.org/wiki/Recife" target="_blank"><i class="fa fa-location-arrow"></i> Recife, PE</a><br />
+              <a href="javascript:;" target="_blank"><i class="fa fa-location-arrow"></i> Recife, PE</a><br />
               <a href="javascript:;" target="_blank"><i class="fa fa-book"></i> FG, Ciência da Computação</a><br />
               <a href="tel:+5581996493276" target="_blank"><i class="fa fa-phone"></i>+55 (81) 99649-3276</a>
             </div>
