--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
       <div class="column">
         <div class="card is-fullwidth">
           <div class="card-image">
-            <figure class="image is-4by3" style="background: url(images/geracaoz.png); cursor: move; background-repeat: no-repeat; width: 100% important; background-size:100%;"></figure>
+            <figure class="image is-4by3" style="background: url(images/minecraftmedieval.png); cursor: move; background-repeat: no-repeat; width: 100% important; background-size:100%;"></figure>
           </div>
           <div class="card-content">
             <div class="media">
               <div class="media-left">
                 <figure class="image is-32x32">
-                  <img src="images/favicon-default.png" alt="Image">
+                  <img src="images/favicon-mm.png" alt="Image">
                 </figure>
               </div>
               <div class="media-content">
-                <p class="title is-5"><a href="images/idhabbo-v7.png" target="_blank">Minecraft Medieval</a></p>
+                <p class="title is-5"><a href="images/minecraftmedieval.png" target="_blank">Minecraft Medieval</a></p>
                 <p class="subtitle is-6">Fórum</p>
               </div>
             </div>
@@ -303,7 +303,7 @@
               <hr>
               <p class="title is-4">Habilidades</p>
               <p class="control">
-                <span class="tag is-dark">PHP (Laravel)</span>
+                <span class="tag is-dark">PHP (+Laravel)</span>
                 <span class="tag is-dark">HTML5</span>
                 <span class="tag is-dark">CSS3 (+Bootstrap, Semantic UI)</span>
                 <span class="tag is-dark">MySQL</span>
@@ -313,7 +313,7 @@
                 <span class="tag is-info">Apache</span>
                 <span class="tag is-info">NGINX</span>
                 <span class="tag is-info" title="Intermediário">UNIX</span>
-                <span class="tag is-success">GIT</span>
+                <span class="tag is-success" title="Básico">GIT</span>
               </p> 
               <hr>
               <p class="title is-4">Experiências</p>
