--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </figure>
               </div>
               <div class="media-content">
-                <p class="title is-5"><a href="images/minecraftmedieval.png" target="_blank">Minecraft Medieval</a></p>
+                <p class="title is-5"><a href="http://forum.haroldo.org" target="_blank">Minecraft Medieval</a></p>
                 <p class="subtitle is-6">Fórum</p>
               </div>
             </div>
