Link and text fix

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="row col d-flex justify-content-center m-0 mt-2" data-el="icons">
                         <a href="https://www.linkedin.com/in/haroldogondim/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/haroldogondim" target="_blank"><i class="fab fa-github-square"></i></a>
-                        <a href="mailto:hello@haroldo.dev" target="_blank"></a><i class="fas fa-envelope-square"></i></a>
+                        <a href="mailto:hello@haroldo.dev" target="_blank"><i class="fas fa-envelope-square"></i></a>
                     </div>
                 </div>
             </div>
