Link and text fix

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                         <a href="https://github.com/haroldogondim" target="_blank"><i class="fab fa-github-square"></i></a>
                         <a href="mailto:hello@haroldo.dev" target="_blank"><i class="fas fa-envelope-square"></i></a>
                     </div>
+
+                    <div class="col text-center mt-1">
+                        hello@haroldo.dev
+                    </div>
                 </div>
             </div>
         </header>
@@ -89,14 +93,14 @@
                     <h2 class="title">Projects <i class="fas fa-laptop-house"></i></h2>
                     <ul>
                         <li class="col-12 exp text-center">
-                            <h2><a href="images/ksrp.png" target="_blank">KSRP <i class="fas fa-external-link-alt"></i></a></h2>
+                            <h2><a href="https://discord.gg/wv5j4ESYcK" target="_blank">KSRP <i class="fas fa-external-link-alt"></i></a></h2>
                             <div class="role">Full-stack Developer <span class="info">(recent)</span></div>
                             <div class="full">
-                                KSRP was a <b>GTAV Roleplay game server</b>. Using FiveM as game's modification platform and Lua programming language we made a simulation of real world using the graphic engine of GTA V (game). KSRP has become the biggest <a href="https://www.google.com/search?q=gtav+roleplay" target="_blank">roleplay server</a> in Brazil for a long time with more than active 1.000 players per week. In this project I dedicated my time and experience to challenge myself learning Lua such as Node.js and TypeScript, also increasing my knowledge and skills in Front-end (HTML, CSS, JavaScript, Bootstrap and jQuery mostly) which I used to create new interfaces. Today, KSRP became <a href="https://discord.gg/ZVFU7czbKC" target="_blank"><b>KS Community</b></a> server on Discord to help people to start programming in Lua and providing knowledge to everyone. The main topic of the community is Lua/FiveM. You can find more about our previously project searching on <a href="https://youtu.be/_snSbWWmJwI?t=246" target="_blank">YouTube</a> <i>(portuguese only)</i>.
+                                KSRP was a <b>GTAV Roleplay game server</b>. Using <a href="https://fivem.net/" target="_blank">FiveM</a> as game's modification platform and Lua programming language we made a simulation of real world using the graphic engine of GTA V (game). KSRP has become the biggest <a href="https://www.google.com/search?q=gtav+roleplay" target="_blank">roleplay server</a> in Brazil for a long time with more than active 1.000 players per week. In this project I dedicated my time and experience to challenge myself learning Lua such as Node.js and TypeScript, also increasing my knowledge and skills in Front-end (HTML, CSS, JavaScript, Bootstrap and jQuery mostly) which I used to create new interfaces. Today, KSRP became <a href="https://discord.gg/ZVFU7czbKC" target="_blank"><b>KS Community</b></a> server on Discord to help people to start programming in Lua and providing knowledge to everyone. The main topic of the community is Lua/FiveM. You can find more about our project searching on <a href="https://youtu.be/_snSbWWmJwI?t=246" target="_blank">YouTube</a> <i>(portuguese only)</i>.
                             </div>
                         </li>
                         <li class="col-12 exp text-center">
-                            <h2><a href="images/tropihabbo.png" target="_blank">ProHabbo <i class="fas fa-external-link-alt"></i></a></h2>
+                            <h2><a href="images/prohabbo.png" target="_blank">ProHabbo <i class="fas fa-external-link-alt"></i></a></h2>
                             <span class="role">Full-stack developer</span>
                             <div class="full">
                                 ProHabbo was a <a href="https://www.habbo.com.br" target="_blank"><b>Habbo Hotel</b></a> fansite. ProHabbo was also built with same technologies of <b>Habboz</b> and I the application was running with <b>PHP-FPM</b> and <b></b>Nginx</b> as HTTP server to increase performance. We deployed the website using Ubuntu Server 10.04 + LAMP Server, using GitHub to code versioning and deploy the production. The site had services/systems like <a href="https://www.shoutcast.com/" target="_blank"><b>SHOUTCast streaming player</b></a>, articles section, forum, art gallery, Facebook and Twitter Login API integration, user profile fully customizable with stickers, widgets and a lot of stuff, art gallery, and a lot more all built from zero with my own tiny <i>framework</i>. The website was fully customizable by a CMS also developed by myself. ProHabbo won two <b>Habbo Awards </b>trophies in category <b>Best Official Habbo Fansite</b> in 2016, 2017 and 2018. I also joined ProHabbo fansite for <b>6 months</b> as Freelancer Full-stack Developer. <i>ProHabbo today is not active anymore.</i>
