--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
                     <div class="col text-center mt-1">
                         hello@haroldo.dev
+                        <p class="mt-1">Rio de Janeiro, RJ - Brazil</p>
                     </div>
                 </div>
             </div>
