--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
     <link href="css/app.css" rel="stylesheet">
-    
+    <link rel="icon" href="images/favicon.png" />
+
+    <meta name="description" content="Um pouco sobre minha trajetória nesse universo gigante de desenvolvimento">
     <title>Haroldo Gondim</title>
 </head>
 
@@ -33,11 +34,12 @@
                     <div class="row col d-flex justify-content-center m-0 mt-2" data-el="icons">
                         <a href="https://www.linkedin.com/in/haroldogondim/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/haroldogondim" target="_blank"><i class="fab fa-github-square"></i></a>
+                        <a href="https://stackoverflow.com/users/2154665/haroldo-gondim" target="_blank"><i class="fab fa-stack-overflow"></i></a>
                         <a href="mailto:hello@haroldo.dev" target="_blank"><i class="fas fa-envelope-square"></i></a>
                     </div>
 
                     <div class="col text-center mt-1">
-                        hello@haroldo.dev
+                        hello@haroldo.dev | haroldogondim@hotmail.com
                     </div>
                 </div>
             </div>
@@ -67,11 +69,28 @@
                         <li>Apache2</li>
                         <li>NGINX</li>
                         <li>Node.js</li>
+                        <li>React.js</li>
                     </ul>
                 </section>
                 <section class="row container-fluid section experience" id="experience">
                     <h2 class="title">Work Experience <i class="fas fa-briefcase"></i></h2>
                     <ul>
+                        <li class="col-12 exp text-center">
+                            <h2 class="current"><i class="fas fa-laptop-house"></i> <a href="https://www.callflex.com.br/" target="_blank">Callflex Sistemas Digitais <i class="fas fa-external-link-alt"></i></a></h2>
+                            <div class="role">Full-stack Developer</div>
+                            <div class="full">
+                                Callflex is a company located in São Paulo, SP - Brazil and offers solutions for the field of Telephony and Call Centers, such as Adaptive Predictive Dialers and IVR, Communication Platforms, Robots for Process Automation, Service Tabulator, Education Incentive with Educational Platform among others. I joined Callflex as a Full-Stack Developer to develop new solutions, perform maintenance and improvements to the system in general, creating new tools, integrations, microservices, among others, all in a panel where the customer manages all of their contracted products. This panel contains several modules that allow you to customize and manage the entire operation of your contracted service, such as managing your strategies in an advanced way, generating advanced reports, in addition to a multitude of tools and functionalities. The panel currently uses PHP 5.6, MySQL, HTML, CSS and JavaScript mostly. At Callflex we also use Gitlab for system versioning and new releases for customers, VPN, Linux Debian, and several other technologies.
+                            </div>
+                        </li>
+
+                        <li class="col-12 exp text-center">
+                            <h2><a href="https://www.webedia.com.br/" target="_blank">Webedia Group <i class="fas fa-external-link-alt"></i></a></h2>
+                            <div class="role">Game Broadcast</div>
+                            <div class="full">
+                                Webedia Group is a multinational company operating in Brazil in the field of technology, games, food, audiovisual production, etc, and is the owner of several brands such as TudoGostoso, Parafernelha, AdoroCinema, IGN, MGG, NerdCubo, PureBreak, PurePeople, among others. As I've always worked with games and always loved this niche, and I also have vast knowledge in development, I was invited to participate in the production of some events and today I also provide services for Webedia SP only as a Service Provider in the Games Event Production branch and Broadcasting of Games Championships.
+                            </div>
+                        </li>
+
                         <li class="col-12 exp text-center">
                             <h2><a href="http://virtus.host/" target="_blank">VirtusHost <i class="fas fa-external-link-alt"></i></a></h2>
                             <div class="role">Full-stack Developer</div>
@@ -83,7 +102,7 @@
                             <h2><a href="http://www.zaite.com.br/" target="_blank">Zaite Tecnologia <i class="fas fa-external-link-alt"></i></a></h2>
                             <span class="role">Back-end Developer</span>
                             <div class="full">
-                                Zaite Tecnologia is a small company in Recife, Pernambuco. They used to sell their main product called Zaite Pronto which is a CMS (Content Management System). I was designed to develop new websites and integrate it with Zaite Pronto using technologies such as PHP on Back-end and also HTML, CSS, JavaScript (plus jQuery, AJAX and RESTful) on Front-end and using MySQL as DB.
+                                Zaite Tecnologia is a small company in Recife, Pernambuco - Brazil. They used to sell their main product called Zaite Pronto which is a CMS (Content Management System). I was designed to develop new websites and integrate it with Zaite Pronto using technologies such as PHP on Back-end and also HTML, CSS, JavaScript (plus jQuery, AJAX and RESTful) on Front-end and using MySQL as DB.
                                 <p>In this while between Zaite and VirtusHost I was focused on learning and upgrading my hard and soft skills, in addition to my personal projects.</p>
                             </div>
                         </li>
@@ -117,7 +136,7 @@
                             <h2><a href="images/habboz.png" target="_blank">Habboz <i class="fas fa-external-link-alt"></i></a></h2>
                             <span class="role">Full-stack Developer</span>
                             <div class="full">
-                                Habboz was a <a href="https://www.habbo.com.br" target="_blank"><b>Habbo Hotel</b></a> fansite and also a personal project at the time. Habboz was built with PHP, HTML, CSS, JavaScript (+jQuery and a few plugins), MySQL, and the application was running with <b>PHP-FPM</b> and <b></b>Nginx</b> as HTTP server to increase performance. The site consumes services like <a href="https://www.shoutcast.com/" target="_blank"><b>SHOUTCast streaming player</b></a>, articles section, forum, art gallery, Facebook and Twitter Login API integration, user profile fully customizable with stickers, widgets and a lot of stuff, art gallery, and a lot more all built from zero with my own tiny <i>framework</i>. The website was fully customizable by a CMS also developed by myself. Habboz also won the trophy of <b>Best Unofficial Habbo Fansite</b> category in 2015 at <b>Habbo Awards</b>. I also joined Habboz fansite for <b>3 years</b> as Freelancer Full-stack Developer and built two site versions, and the second version was cleaner and faster, using a Cache File Driver to optimize MySQL and load performance. <i>Habboz today is not active anymore.</i>
+                                Habboz was a <a href="https://www.habbo.com.br" target="_blank"><b>Habbo Hotel</b></a> fansite and also a personal project at the time. Habboz was built with PHP, HTML, CSS, JavaScript (+jQuery and a few plugins like lightbox, carousel pagination with Ajax/JSON and real-time popup custom alerts, all made by myself with JavaScript/jQuery), MySQL, and the application was running with <b>PHP-FPM</b> and <b></b>Nginx</b> as HTTP server to increase performance. The site consumes services like <a href="https://www.shoutcast.com/" target="_blank"><b>SHOUTCast streaming player</b></a>, articles section, forum, art gallery, Facebook and Twitter Login API integration, user profile fully customizable with stickers, widgets and a lot of stuff, art gallery, and a lot more all built from zero with my own tiny <i>framework</i>. The website was fully customizable by a CMS also developed by myself. Habboz also won the trophy of <b>Best Unofficial Habbo Fansite</b> category in 2015 at <b>Habbo Awards</b>. I also joined Habboz fansite for <b>3 years</b> as Freelancer Full-stack Developer and built two site versions, and the second version was cleaner and faster, using a Cache File Driver to optimize MySQL and load performance. <i>Habboz today is not active anymore.</i>
                             </div>
                         </li>
                         <li class="col-12 exp text-center">
