--- a/index.html
+++ b/index.html
@@ -57,29 +57,46 @@
                         <li>Laravel</li>
                         <li>CakePHP</li>
                         <li>JavaScript</li>
-                        <li>Node.js</li>
                         <li>jQuery</li>
+                        <li>Node.js</li>
+                        <li>Express.js</li>
+                        <li>Axios.js</li>
+                        <li>Ether.js</li>
+                        <li>Discord.js</li>
+                        <li>Google APIs</li>
+                        <li>JWT</li>
                         <li>Ajax</li>
                         <li>React.js</li>
                         <li>JSON</li>
-                        <li>RESTful</li>
+                        <li>RESTful APIs</li>
                         <li>MySQL</li>
+                        <li>MongoDB</li>
                         <li>Git</li>
                         <li>Bootstrap</li>
                         <li>Semantic UI</li>
-                        <li>Material</li>
+                        <li>Material UI</li>
                         <li>Lua</li>
                         <li>UNIX</li>
                         <li>Apache2</li>
                         <li>NGINX</li>
+                        <li>Docker</li>
+                        <li>AWS</li>
                     </ul>
                 </section>
                 <section class="row container-fluid section experience" id="experience">
                     <h2 class="title">Work Experience <i class="fas fa-briefcase"></i></h2>
                     <ul>
                         <li class="col-12 exp text-center">
+                            <h2 class="current"><a href="https://www.somosadd.com.br/" target="_blank">.add <i class="fas fa-external-link-alt"></i></a></h2>
+                            <div class="role">Node.js Back-end Developer (recent)</div>
+                            <div class="full">
+                                <strong>.add is a company from Brazil offering a lot of solutions to your company like Text Analytics, OutSystems, Agile Projects, Outsourcing and others. Today at .add I work as Node.js Back-end Developer outsourced employee for <a href="https://www.brasilcap.com.br/"><strong>BrasilCap</strong></a>, a company from <a href="https://www.bb.com.br"><strong>Banco do Brasil</strong></a> working with insurance capitalization. More info soon.
+                            </div>
+                        </li>
+
+                        <li class="col-12 exp text-center">
                             <h2 class="current"><a href="https://www.callflex.com.br/" target="_blank">Callflex Sistemas Digitais <i class="fas fa-external-link-alt"></i></a></h2>
-                            <div class="role">Full-stack Developer (recent)</div>
+                            <div class="role">Full-stack Developer</div>
                             <div class="full">
                                 Callflex is a company located in São Paulo, SP - Brazil and offers solutions for the field of Telephony and Call Centers, such as Adaptive Predictive Dialers and IVR, Communication Platforms, Robots for Process Automation, Service Tabulator, Education Incentive with Educational Platform among others. I joined Callflex as a Full-Stack Developer to develop new solutions, perform maintenance and improvements to the system in general, creating new tools, integrations, microservices, among others, all in a panel where the customer manages all of their contracted products. This panel contains several modules that allow you to customize and manage the entire operation of your contracted service, such as managing your strategies in an advanced way, generating advanced reports, in addition to a multitude of tools and functionalities. The panel currently uses PHP 5.6, MySQL, HTML, CSS and JavaScript mostly. At Callflex we also use Gitlab for system versioning and new releases for customers, VPN, Linux Debian, and several other technologies.
                             </div>
